[package]
name = "coding100"
version = "0.1.0"
authors = ["Kazuki Yoshida <idkphys.030zzz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "no001"
path = "src/no001.rs"

[[bin]]
name = "no002"
path = "src/no002.rs"
