[package]
name = "coding100"
version = "0.1.0"
authors = ["Kazuki Yoshida <idkphys.030zzz@gmail.com>"]
edition = "2018"

[dependencies]
proconio = "0.4.1"
itertools = "0.9.0"

[[bin]]
name = "no001"
path = "src/no001.rs"

[[bin]]
name = "no002"
path = "src/no002.rs"

[[bin]]
name = "no003"
path = "src/no003.rs"

[[bin]]
name = "no004"
path = "src/no004.rs"

[[bin]]
name = "no005"
path = "src/no005.rs"

[[bin]]
name = "no006"
path = "src/no006.rs"

[[bin]]
name = "no010"
path = "src/no010.rs"

[[bin]]
name = "no023"
path = "src/no023.rs"

[[bin]]
name = "no018"
path = "src/no018.rs"

[[bin]]
name = "no021"
path = "src/no021.rs"

[[bin]]
name = "no025"
path = "src/no025.rs"
