[package]
name = "coding100"
version = "0.1.0"
authors = ["Kazuki Yoshida <idkphys.030zzz@gmail.com>"]
edition = "2018"

[dependencies]
proconio = "0.4.1"
itertools = "0.9.0"

[[bin]]
name = "no001"
path = "src/no001.rs"

[[bin]]
name = "no002"
path = "src/no002.rs"

[[bin]]
name = "no003"
path = "src/no003.rs"

[[bin]]
name = "no004"
path = "src/no004.rs"

[[bin]]
name = "no005"
path = "src/no005.rs"

[[bin]]
name = "no006"
path = "src/no006.rs"

[[bin]]
name = "no010"
path = "src/no010.rs"

[[bin]]
name = "no023"
path = "src/no023.rs"

[[bin]]
name = "no018"
path = "src/no018.rs"

[[bin]]
name = "no021"
path = "src/no021.rs"

[[bin]]
name = "no025"
path = "src/no025.rs"

[[bin]]
name = "no027"
path = "src/no027.rs"

[[bin]]
name = "no029"
path = "src/no029.rs"

[[bin]]
name = "no030"
path = "src/no030.rs"

[[bin]]
name = "dp001"
path = "src/dp001.rs"

[[bin]]
name = "dp002"
path = "src/dp002.rs"

[[bin]]
name = "dp003"
path = "src/dp003.rs"

[[bin]]
name = "dp004"
path = "src/dp004.rs"

[[bin]]
name = "dp005"
path = "src/dp005.rs"

[[bin]]
name = "no034"
path = "src/no034.rs"

[[bin]]
name = "no035"
path = "src/no035.rs"

[[bin]]
name = "no036"
path = "src/no036.rs"

[[bin]]
name = "no037"
path = "src/no037.rs"
